--- a/package.json
+++ b/package.json
@@ -81,8 +81,11 @@
     "@types/got": "^9.6.11",
     "@types/jest": "^26.0.20",
     "@types/lodash.camelcase": "^4.3.6",
+    "@types/nock": "^11.1.0",
     "@types/node": "^14.14.35",
     "@types/rollup-plugin-json": "^3.0.2",
+    "@types/rollup-plugin-node-builtins": "^2.1.1",
+    "@types/rollup-plugin-node-globals": "^1.4.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@typescript-eslint/typescript-estree": "^4.18.0",
@@ -98,8 +101,11 @@
     "jest": "^26.6.3",
     "jest-config": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "nock": "^13.0.11",
     "prettier": "^2.2.1",
     "rollup": "^2.41.4",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
