--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,11 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "declarationDir": "dist/types",
     "outDir": "dist",
     "typeRoots": ["node_modules/@types"],
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
       "@mock/*": ["./test/unit/mock/*"]
