--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "files": [
     "dist"
   ],
+  "type": "module",
   "author": "LokiSharp <loki.sharp@gmail.com>",
   "repository": {
     "type": "git",
@@ -20,7 +21,7 @@
   },
   "scripts": {
     "lint": "eslint -c .eslintrc.yml \"src/**/*.ts\" \"test/**/*.ts\"",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc src",
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist && rollup -c rollup.config.ts && typedoc src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
@@ -78,19 +79,19 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/debug": "^4.1.5",
     "@types/got": "^9.6.11",
     "@types/jest": "^26.0.20",
-    "@types/lodash.camelcase": "^4.3.6",
-    "@types/nock": "^11.1.0",
     "@types/node": "^14.14.35",
+    "@types/pg": "^7.14.11",
     "@types/rollup-plugin-json": "^3.0.2",
-    "@types/rollup-plugin-node-builtins": "^2.1.1",
-    "@types/rollup-plugin-node-globals": "^1.4.0",
+    "@types/screeps": "^3.2.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@typescript-eslint/typescript-estree": "^4.18.0",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
+    "debug": "^4.3.1",
     "eslint": "^7.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.1.0",
@@ -102,17 +103,21 @@
     "jest-config": "^26.6.3",
     "lint-staged": "^10.5.4",
     "nock": "^13.0.11",
+    "pouchdb-debug": "^7.2.1",
     "prettier": "^2.2.1",
     "rollup": "^2.41.4",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "tscpaths": "^0.0.9",
+    "tslib": "^2.1.0",
     "typedoc": "^0.20.32",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "got": "^11.8.2"
+    "@supercharge/promise-pool": "^1.6.0",
+    "got": "^11.8.2",
+    "pg": "^8.5.1"
   }
 }
