--- a/package.json
+++ b/package.json
@@ -2,123 +2,60 @@
   "name": "screeps-side-service",
   "version": "0.0.0",
   "description": "",
-  "keywords": [],
-  "main": "dist/screeps-side-service.umd.js",
-  "module": "dist/screeps-side-service.es5.js",
-  "typings": "dist/types/screeps-side-service.d.ts",
-  "files": [
-    "dist"
-  ],
-  "type": "module",
   "author": "LokiSharp <loki.sharp@gmail.com>",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "license": "GPL",
-  "engines": {
-    "node": ">=10.0.0"
-  },
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "lint": "eslint -c .eslintrc.yml \"src/**/*.ts\" \"test/**/*.ts\"",
-    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist && rollup -c rollup.config.ts && typedoc src",
-    "start": "rollup -c rollup.config.ts -w",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
-    "commit": "git-cz",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    }
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverageFrom": [
-      "src/*.{js,ts}"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.2.0",
-    "@types/debug": "^4.1.5",
-    "@types/got": "^9.6.11",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.35",
-    "@types/pg": "^7.14.11",
-    "@types/rollup-plugin-json": "^3.0.2",
-    "@types/screeps": "^3.2.2",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@typescript-eslint/typescript-estree": "^4.18.0",
-    "commitizen": "^4.2.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "debug": "^4.3.1",
-    "eslint": "^7.22.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-deprecation": "^1.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
-    "jest-config": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "nock": "^13.0.11",
-    "pouchdb-debug": "^7.2.1",
-    "prettier": "^2.2.1",
-    "rollup": "^2.41.4",
-    "rollup-plugin-sourcemaps": "^0.6.3",
-    "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "tscpaths": "^0.0.9",
-    "tslib": "^2.1.0",
-    "typedoc": "^0.20.32",
-    "typescript": "^4.2.3"
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
+    "@types/got": "^9.6.11",
+    "@types/pg": "^7.14.11",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.6"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.0",
+    "@nestjs/testing": "^7.6.15",
     "@supercharge/promise-pool": "^1.6.0",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@types/nock": "^11.1.0",
+    "@types/node": "^14.14.36",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "got": "^11.8.2",
+    "jest": "^26.6.3",
+    "nock": "^13.0.11",
     "pg": "^8.5.1",
-    "typeorm": "^0.2.32"
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.0.18",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.32",
+    "typescript": "^4.2.3"
   }
 }
