--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,20 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "es5",
-    "module": "es2015",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
-    "strict": true,
-    "sourceMap": true,
+    "module": "commonjs",
     "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
+    "removeComments": true,
     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist",
-    "typeRoots": ["node_modules/@types"],
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
       "@mock/*": ["./test/unit/mock/*"]
-    }
-  },
-  "include": ["src", "test"]
+    },
+    "incremental": true
+  }
 }
